examples/test/testpolicy1910.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1910
  namespace: namespace41
spec:
  podSelector:
    matchLabels:
      key18: value46
      key39: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value13
          key39: value33
          key19: value14
      podSelector:
        matchLabels:
          key10: value48
          key26: value48
          key48: value33
